--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<title>Honest Electronics</title>
 	<link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-    <meta property="og:title" content="Nico Stephou - Graphic Designer, Visual Artist" />
+    <meta property="og:title" content="Honest Electronics" />
 	<meta property="og:type" content="info" />
-	<meta property="og:url" content="wwww.nicostephou.com" />
-	<meta property="og:image" content="https://s8.postimg.org/nludrhmph/og-image.jpg"/>
+	<meta property="og:url" content="wwww.honestelectronics.info" />
+	<meta property="og:image" content="https://s18.postimg.org/rpjzqjf09/Screen_Shot_2018-03-16_at_12.40.55_PM.png"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="images/he.png" type="image/x-icon">
 </head>
@@ -17,8 +17,11 @@
 
 	<div class="grid">
 		<div class="row">
+						<div "height:100%" class="col-1">
+			</div>
 			<div style="height:100%"  class="col-5" overflow="scroll">
-			<img src="images/he.png" class="logo" id="animation-target">
+			<br>
+			<br>
 			<h1>Honest Electronics</h1>
 			<p>Do—It—Together Collective <br>& Record Label from Cyprus.
 			<h4><a href="about.html" target="_self">About</a></h4>
@@ -77,10 +80,6 @@
 			<br><a href="https://www.facebook.com/events/1501151630013161/">—1/18 Sleeping Shoulder (Album Presentation), Kakopetria</a></p>
 
 
-			
-
-
-<br>
 <br>
 
 				<!-- Begin MailChimp Signup Form -->
@@ -101,31 +100,13 @@
 					<!--End mc_embed_signup-->
 			</div>
 
+			<div "height:100%" class="col-2">
+			</div>	
+			<div "height:100%" class="col-4">
 
-			<div "height:100%" class="col-3">
-				<br>
-				<br>
-				<br>
-				<br>
-<br>
-<br>
-<br>
-
-			
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-        	<div "height:100%" class="col-2" id="rightbar">
-
-   		     </div>
+				<img src="images/fag.jpeg" width="100%" class="sideimg">
+				<h2>'Fag Approved #3' Dries Saadallah, 2018</h2>
+	
 
 	</div>
 
