--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:url" content="wwww.honestelectronics.info" />
 	<meta property="og:image" content="https://s18.postimg.org/rpjzqjf09/Screen_Shot_2018-03-16_at_12.40.55_PM.png"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="images/he.png" type="image/x-icon">
+	<link rel="icon" type="image/png" href="https://s18.postimg.org/r2l30zfjd/image.png" />
 </head>
 
 <body style="background-color:white;">
