--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 	<title>Honest Electronics</title>
 	<link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
+    	<link rel="icon" type="image/x-icon" href="images/he_Osv_icon.ico" />
     <meta property="og:title" content="Honest Electronics" />
 	<meta property="og:type" content="info" />
 	<meta property="og:url" content="wwww.honestelectronics.info" />
 	<meta property="og:image" content="https://s18.postimg.org/rpjzqjf09/Screen_Shot_2018-03-16_at_12.40.55_PM.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/png" href="https://s18.postimg.org/r2l30zfjd/image.png" />
+
 </head>
 
 <body style="background-color:white;">
