--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<title>Honest Electronics</title>
 	<link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-    	<link rel="icon" type="image/x-icon" href="images/he_Osv_icon.ico" />
+    <link rel="icon" type="image/x-icon" href="images/he_Osv_icon.ico" />
     <meta property="og:title" content="Honest Electronics" />
 	<meta property="og:type" content="info" />
 	<meta property="og:url" content="wwww.honestelectronics.info" />
+	<meta property="og:description" content="Do—It—Together Collective & Record Label from Cyprus" />
 	<meta property="og:image" content="https://s18.postimg.org/rpjzqjf09/Screen_Shot_2018-03-16_at_12.40.55_PM.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -88,15 +89,16 @@
 				<style type="text/css">
 				#mc_embed_signup{background:#fff; clear:left; font:11px Kanit,Arial,sans-serif;  width:100px;}
 				</style>
-					<div id="mc_embed_signup" class="newsletter" style="background-color:white;">
-					<form action="https://honestelectronics.us12.list-manage.com/subscribe/post?u=b15712b2adfcf17dcbba71903&amp;id=ebe7981815" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    					<div id="mc_embed_signup_scroll">
-						<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+				<div id="mc_embed_signup" class="newsletter" style="background-color:white;">
+				<form action="https://honestelectronics.us12.list-manage.com/subscribe/post?u=b15712b2adfcf17dcbba71903&amp;id=ebe7981815" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    			<div id="mc_embed_signup_scroll">
+				<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
     					<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    						<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b15712b2adfcf17dcbba71903_ebe7981815" tabindex="-1" value=""></div>
-    						<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-   				 		</div>
-					</form>
+    			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b15712b2adfcf17dcbba71903_ebe7981815" tabindex="-1" value=""></div>
+    			<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+    			</div>
+   				 </div>
+   				 </form>
 					</div>
 					<!--End mc_embed_signup-->
 			</div>
