--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
 
 <body style="background-color:white;">
 
+
+</div>
+
+
 	<div class="grid">
 		<div class="row">
-						<div "height:100%" class="col-1">
+			<div "height:100%" class="col-1">
 			</div>
+
 			<div style="height:100%"  class="col-5" overflow="scroll">
 			<br>
 			<br>
@@ -101,17 +106,22 @@
    				 </form>
 					</div>
 					<!--End mc_embed_signup-->
+			     </div>
+
+
+		   <div "height:100%" class="col-5">
+		   <p>
+           <a href="festival.html">
+           <img src="images/gathering-poster-web.png" alt="CLICK FOR ALL FESTIVAL INFO" width="100%" class="sideimg">
+           </a>
+           </p>
+		   <h2>CLICK FOR ALL FESTIVAL INFO</h2>
+	       </div>
+
+	       <div "height:100%" class="col-1">
 			</div>
 
-			<div "height:100%" class="col-2">
-			</div>	
-			<div "height:100%" class="col-4">
-
-				<img src="images/fag.jpeg" width="100%" class="sideimg">
-				<h2>'Fag Approved #3' Dries Saadallah, 2018</h2>
-	
-
-	</div>
-
 </body>
+
+<script src="css/main.js"></script>
 </html>
