--- a/festival.html
+++ b/festival.html
@@ -35,10 +35,10 @@
 			<br>
 			<h3>The Gathering is a yearly festival organised by Honest Electronics in order to promote local underground talent.</h3>
 			<br>
-<h3>	This year we split the festival into 4 events.<h3>	
+<h3>	This year we split the festival into 4 events;<h3>	
 
 	<br>
-
+	<br>
 <h3><a href="#one">Part 1: INTRO</a><br>
 <a href="#two">Part 2: EARTHGAZE</a><br>
 <a href="#three">Part 3: STARGAZE</a><br>
@@ -197,6 +197,8 @@
 		   <p>
            <a href="festival.html">
            <img src="images/gathering-poster-nude.png" alt="CLICK FOR ALL FESTIVAL INFO" width="100%" class="sideimg">
+            <img src="images/artwork2.png" alt="CLICK FOR ALL FESTIVAL INFO" width="100%" class="sideimg">
+           <img src="images/artwork3.png" alt="CLICK FOR ALL FESTIVAL INFO" width="100%" class="sideimg">
            </a>
            </p>
 	       </div>
