--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
 			<br>
 			<br>
 			<h1>Honest Electronics</h1>
+
 			<p>Do—It—Together Collective <br>& Record Label from Cyprus.
 			<h4><a href="about.html" target="_self">About</a></h4>
 			<h4><a href="contact.html" target="_self">Contact</a></h4>
 			<h4><a href="https://honestelectronics.bandcamp.com/merch" target="_blank">Shop</a></h4>
 			<p></p>
             
-
+		<a href="festival.html">Click Here for "The Gathering 2018" Info</a>
 				<p><u>Artists</u><br>
 				<a href="artists/aportrait.html" target="_self">Aportrait</a><br>
 				<a href="artists/aristodemos.html" target="_self">Aristodemos</a><br>
@@ -115,7 +116,6 @@
            <img src="images/gathering-poster-web.png" alt="CLICK FOR ALL FESTIVAL INFO" width="100%" class="sideimg">
            </a>
            </p>
-		   <h2>CLICK FOR ALL FESTIVAL INFO</h2>
 	       </div>
 
 	       <div "height:100%" class="col-1">
