--- a/festival.html
+++ b/festival.html
@@ -12,6 +12,7 @@
 	<meta property="og:description" content="Do—It—Together Collective & Record Label from Cyprus" />
 	<meta property="og:image" content="https://s18.postimg.org/rpjzqjf09/Screen_Shot_2018-03-16_at_12.40.55_PM.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src='scripts/cursor.js'></script>
 
 </head>
 
@@ -45,7 +46,7 @@
 <a href="#four">Part 4: RAVE</a><br>
 <br>
 <a href="#five">TICKETS & PRICING</a><br>
-<a href="#five">FAQ</a>
+<a href="#five">CONTACT</a>
 
 
 </h2>
@@ -184,11 +185,19 @@
 <p>♦️€10 for 1 event<br>
 ♦️€15 for 2 events<br>
 ♦️€20 for 3 events</p>
-<br>
-<br>
-<h1>BUY ONLINE<h1>
+<h2><a href="https://ticketbud.com/events/627f1ebe-5eb2-11e8-b243-83bb31f9aa46" target="_blank">BUY ONLINE</a></h1>
 
-<p>MORE INFO SOON</p>
+<br>
+<br>
+<br>
+<br>
+<h1 id="six">CONTACT</h1>
+<br>
+<p>infohonestelectronics@gmail.com</p>
+<br>
+<br>
+<br>
+<br>
 
 				 </div>
 
