--- a/festival.html
+++ b/festival.html
@@ -14,6 +14,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src='scripts/cursor.js'></script>
 
+
 </head>
 
 <body>
@@ -53,7 +54,7 @@
 
 <br>
 <br>
-<h1 id="one">Part 1: INTRO</h1>
+<h1 id="one">Part 1: INTRO, June 27</h1>
 
 <p>	The introductory event will take place in the center of Nicosia, at the TESTDRIVE at the newly opened art space DRIVEDRIVE. Here we will present a number of projects initiated by Honest Electronics collective.</p>	
 
@@ -75,9 +76,11 @@
 
 <p>🔹Mutual Ground Vol II is the second music compilation released by the Honest Electronics label. It acts as a preview of the music which will be heard at the events, with (number) performing artists contributing an original composition to the compilation. The compilation will be sold together with last years compilation on a special packaging.</p>
 
+<p><a href="https://www.facebook.com/events/187916372018099/">FACEBOOK EVENT</a></p>
+
 <br>
 <br>
-<h1 id="two">Part 2: EARTHGAZE</h1>
+<h1 id="two">Part 2: EARTHGAZE, June 29</h1>
 
 <p>EARTHGAZE is a themed night of listening, downtempo and tribal rhythms. We asked our invited artists to be inspired by what Earth means to them.</p>
 
@@ -108,10 +111,12 @@
 🔹Elena Savvidou is in charge for light performances.<br>
 🔹There will be summer cocktails served.</p>
 
+<p><a href="https://www.facebook.com/events/1634650949976261/">FACEBOOK EVENT</a></p>
+
 
 <br>
 <br>
-<h1 id="three">Part 3: STARGAZE</h1>
+<h1 id="three">Part 3: STARGAZE, July 13</h1>
 
 <p>For STARGAZE we visit again magical location of Tamassos Reservoir and we place ourselves outdoors between the eucalyptus trees and the GAZE STAGE. This stage is designed for an audiovisual experience by the architect Eleni Diana Elia and the visual artist Demetris Shammas.</p>
 
@@ -143,11 +148,12 @@
 🔹Elena Savvidou is in charge for light performances.<br>
 🔹There will be summer cocktails served.</p>
 
+<p><a href="https://www.facebook.com/events/432541207200822/">FACEBOOK EVENT</a></p>
 
 
 <br>
 <br>
-<h1 id="four">Part 4: RAVE</h1>
+<h1 id="four">Part 4: RAVE, July 14</h1>
 
 
 <p>For RAVE we visit the area next to the lake of Tamassos. Here we will create a stage designed for 24 hours of outdoor rave music. A special team has been assembled to ensure plenty of shade, cooling beverages and comfortable sitting area.</p>
@@ -174,6 +180,8 @@
 🔹There will be running cold water.<br>
 🔹There will be a comfy sitting area.<br>
 🔹There will be summer cocktails served.</p>
+
+<p><a href="https://www.facebook.com/events/1687395218020168/">FACEBOOK EVENT</a></p>
 <br>
 <br>
 <h1 id="five">PRICES:</h1>
