--- a/festival.html
+++ b/festival.html
@@ -54,7 +54,7 @@
 
 <br>
 <br>
-<h1 id="one">Part 1: INTRO, June 27</h1>
+<h1 id="one">Part 1: INTRO — June 27</h1>
 
 <p>	The introductory event will take place in the center of Nicosia, at the TESTDRIVE at the newly opened art space DRIVEDRIVE. Here we will present a number of projects initiated by Honest Electronics collective.</p>	
 
@@ -80,7 +80,7 @@
 
 <br>
 <br>
-<h1 id="two">Part 2: EARTHGAZE, June 29</h1>
+<h1 id="two">Part 2: EARTHGAZE — June 29</h1>
 
 <p>EARTHGAZE is a themed night of listening, downtempo and tribal rhythms. We asked our invited artists to be inspired by what Earth means to them.</p>
 
@@ -116,7 +116,7 @@
 
 <br>
 <br>
-<h1 id="three">Part 3: STARGAZE, July 13</h1>
+<h1 id="three">Part 3: STARGAZE — July 13</h1>
 
 <p>For STARGAZE we visit again magical location of Tamassos Reservoir and we place ourselves outdoors between the eucalyptus trees and the GAZE STAGE. This stage is designed for an audiovisual experience by the architect Eleni Diana Elia and the visual artist Demetris Shammas.</p>
 
@@ -153,7 +153,7 @@
 
 <br>
 <br>
-<h1 id="four">Part 4: RAVE, July 14</h1>
+<h1 id="four">Part 4: RAVE — July 14</h1>
 
 
 <p>For RAVE we visit the area next to the lake of Tamassos. Here we will create a stage designed for 24 hours of outdoor rave music. A special team has been assembled to ensure plenty of shade, cooling beverages and comfortable sitting area.</p>
@@ -213,9 +213,11 @@
 		   <div "height:100%" class="col-5">
 		   <p>
            <a href="festival.html">
-           <img src="images/gathering-poster-nude.png" alt="CLICK FOR ALL FESTIVAL INFO" width="100%" class="sideimg">
-            <img src="images/artwork2.png" alt="CLICK FOR ALL FESTIVAL INFO" width="100%" class="sideimg">
-           <img src="images/artwork3.png" alt="CLICK FOR ALL FESTIVAL INFO" width="100%" class="sideimg">
+           <img src="images/gathering-poster-nude.png" width="100%" class="sideimg">
+                       <img src="images/artwork6.png"  width="100%" class="sideimg">
+            <img src="images/artwork2.png"  width="100%" class="sideimg">
+           <img src="images/artwork3.png"  width="100%" class="sideimg">
+             <img src="images/artwork4.png"  width="100%" class="sideimg">
            </a>
            </p>
 	       </div>
