--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 			<h4><a href="https://honestelectronics.bandcamp.com/merch" target="_blank">Shop</a></h4>
 			<p></p>
             
-		<a href="festival.html">Click Here for "The Gathering 2018" Info</a>
+		<a href="festival.html" style="color:red;">Click Here for "The Gathering 2018" Info</a>
+		<br>
+		<p><u>Record Label Info</u><br>
 				<p><u>Artists</u><br>
 				<a href="artists/aportrait.html" target="_self">Aportrait</a><br>
 				<a href="artists/aristodemos.html" target="_self">Aristodemos</a><br>
@@ -78,14 +80,14 @@
 
 
 			<p><u>Events</u><br>
-			<a href="events/gathering.html">—7/16 The Gathering, Festival, Kampia</a>
-			<br><a href="events/launch.html">—8/16 Record Label Launch, Thkio Ppalies, Nicosia</a>
-			<br><a href="events/discosucks.html">—NYE/17 Disco Sucks, Coronet, Nicosia</a>
-			<br><a href="https://www.facebook.com/events/1907112182868760/" target="_blank">—6/17 The Gathering II, Festival, Kampia</a><br><a href="https://www.facebook.com/events/224318684745869">—7/17 River Stage 2.5, Outdoor Rave, Kampia</a>
-			<br><a href="http://thkioppalies.org/Sound/One-Year-Honest-Electronics" target="_blank">—8/17 One Year H.E, Thkio Ppalies, Nicosia</a>
-			<br><a href="https://www.facebook.com/events/149480039110473/">—9/17 HAWAIIPRUS LIVE, Sousami, Limassol</a>
-			<br><a href="https://www.facebook.com/events/116173949125343/">—NYE/18 Disco Sucks, Coronet, Nicosia</a>
-			<br><a href="https://www.facebook.com/events/1501151630013161/">—1/18 Sleeping Shoulder (Album Presentation), Kakopetria</a></p>
+			<a href="events/gathering.html">—7/2016 The Gathering, Festival, Kampia</a>
+			<br><a href="events/launch.html">—8/2016 Record Label Launch, Thkio Ppalies, Nicosia</a>
+			<br><a href="events/discosucks.html">—NYE/2017 Disco Sucks, Coronet, Nicosia</a>
+			<br><a href="https://www.facebook.com/events/1907112182868760/" target="_blank">—6/2017 The Gathering II, Festival, Kampia</a><br><a href="https://www.facebook.com/events/224318684745869">—7/2017 River Stage 2.5, Outdoor Rave, Kampia</a>
+			<br><a href="http://thkioppalies.org/Sound/One-Year-Honest-Electronics" target="_blank">—8/2017 One Year H.E, Thkio Ppalies, Nicosia</a>
+			<br><a href="https://www.facebook.com/events/149480039110473/">—9/2017 HAWAIIPRUS LIVE, Sousami, Limassol</a>
+			<br><a href="https://www.facebook.com/events/116173949125343/">—NYE/2018 Disco Sucks, Coronet, Nicosia</a>
+			<br><a href="https://www.facebook.com/events/1501151630013161/">—1/2018 Sleeping Shoulder (Album Presentation), Kakopetria</a></p>
 
 
 <br>
@@ -110,7 +112,7 @@
 			     </div>
 
 
-		   <div "height:100%" class="col-5">
+		   <div "height:100%" class="col-6">
 		   <p>
            <a href="festival.html">
            <img src="images/gathering-poster-web.png" alt="CLICK FOR ALL FESTIVAL INFO" width="100%" class="sideimg">
@@ -118,8 +120,7 @@
            </p>
 	       </div>
 
-	       <div "height:100%" class="col-1">
-			</div>
+
 
 </body>
 
