--- a/festival.html
+++ b/festival.html
@@ -235,7 +235,7 @@
 <br>
 <h1>PROJECTS:</h1>
 <br>
-<h3>Clusters "Festivals Identity" — Nico Stephou</h3>
+<h3><font color="red">Clusters "Festivals Identity" — Nico Stephou</font></h3>
                                    <img src="images/artwork2.png"  width="100%" class="sideimg">
 
 				 </div>
@@ -354,7 +354,14 @@ tb te ta t t<br>
 	       	<p>Over the last couple of years Joralsky has been consistently delivering some memorable hyperlocal sets that take into deep consideration both the dancing community and its surrounding environment, which in turn render “genre” as trivial and antiquated. Hence, the diversity of parties he has cofounded: C’est demon! & Programmed for Love.
 In response to this year’s Earthgaze theme, he is preparing a sunrise set that reflects on the possibility of different gazes. In his own words: “There are two ways one can gaze on earth’s soil…either directly on the ground or if the soil itself becomes dust in the atmosphere. While the first gaze suggests a contemplative, solitary gaze, the second one requires a group commotion agitating the earth: this one implies dancing. My set will oscillate between these two possible earthgazes.” <a href="https://honestelectronics.bandcamp.com/track/tivoli-a-e" target="_blank">Soundcloud</a></p>
 
+<br>
+<br>
+<br>
+<h3><font color="red">Kyklophonon II<br>by Michalis Sham</font></h3>
+<p>"Kyklophonon II" is a unique music instrument, designed and created by the wonderfully talented Michalis Sham. It uses gravity and gears to create its characteristic mesmerising sound.
 
+The instrument, as well as the first personal EP of Michalis based on these sounds, will be presented and performed at The Gathering - Part 1: INTRO.</p>
+                                   <img src="images/kyk1.png"  width="100%" class="sideimg">
 </div>
 
 		   <div "height:100%" class="col-3">
@@ -364,16 +371,13 @@ In response to this year’s Earthgaze theme, he is preparing a sunrise set that
 
            <img src="images/atf-26.png" width="100%" class="sideimg2">
             <h3>Jay Glass Dubs (GR)</h3>
-	       	<p>Jay Glass Dubs is an exercise of style focusing on a counter-factual historical approach of dub music, stripped down to its basic drum/bass/vox/effects form.
+	       	<p>Jay Glass Dubs is an exercise of style focusing on a counter-factual historical approach of dub music, stripped down to its basic drum/bass/vox/effects form.<br>
 
-Dimitris Papadatos (b.1981,USA) is a composer, musician and sound artist based in Athens Greece.
+Dimitris Papadatos (b.1981,USA) is a composer, musician and sound artist based in Athens Greece.<br>
 
-The main concern in his work is an apposition of disparate elements that assume a re-appropriation of historically applied methodologies while questioning forms of empowering them.The biggest body of his work reflects issues as copyright, spirituality and originality, undergoing a constant state of transfiguration of its outsourcing.
-
-At the moment he actively runs three projects.
-Jay Glass Dubs, ΚU and The Hydra.
-
-His work has been presented in various international institutions and festivals from documenta14, the Transmediale, the Athens Biennale, the Onassis Cultural Centre and Fasma Festival, to the Athens/Epidaure Festival, Cynetart Festival, Ombre Lunghe Festival, Fraternity Of Sound Festival and the Greek National Theatre. <a href="<a href="https://www.discogs.com/artist/4124388-Jay-Glass-Dubs" target="_blank">Discogs</a>
+The main concern in his work is an apposition of disparate elements that assume a re-appropriation of historically applied methodologies while questioning forms of empowering them.The biggest body of his work reflects issues as copyright, spirituality and originality, undergoing a constant state of transfiguration of its outsourcing. He has performed in venues and spaces such as Portikus in Frankfurt, Klub Kegelbahn in Lucerne, Departamento in Mexico City, Corsica Studios and Rye Wax in London, Macao in Milan, Haus der Kulturen der Welt in Berlin, Bios in Athens, Soup Kitchen in Manchester, Salon Des Amateurs in Dusseldorf , among others while he has recorded broadcasts for stations such as NTS Radio, Rinse FM,  Radar Radio, dublab and Resonance FM.
+His music is been featured in various radio shows including BBC Radio 3's Late Junction, NTS Radio,WFMU, Rinse FM & Rinse France, Resonance FM, Independent Music Podcast, Dublab and Tiny Mix Tapes' Tabs Out Podcast to name a few.<br>
+Since 2017 he is resident selector for Noods Radio in Bristol, and LYL Radio in Lyon. <a href="https://iamku.net/" target="_blank">Official Website</a>
 </p>
 
 <img src="images/atf-27.png" width="100%" class="sideimg2">
@@ -443,6 +447,43 @@ He performs using a selection of electronic modular sythesizers, drum machines a
 	       	<img src="images/atf-18.png" width="100%" class="sideimg2">
             <h3>Wonderwander (CY)</h3>
 	       	<p>Wandeerwonder’s love for spreading music has been evident for decades. By diving into the dub feeling and selecting from various styles (techno,disco,house,reggae,psy...) she is aiming to surf on the vibes of mystery. <a href="<a href="https://soundcloud.com/honest-electronics/wonderwander-at-river-stage-dishonest-29-july-2017" target="_blank">Soundcloud</a></p>
+	       	<br>
+	       	   	<br>
+	       	   	   	<br>
+	       	   	   	   	<br>
+	       	   	   	   		       	<br>
+	       	   	<br>
+	       	   	   	<br>
+	       	   	   	   	<br>
+	       	   	   	   		       	<br>
+	       	   	<br>
+	       	   	   	<br>
+	       	   	   	   	<br>
+	       	   	   	   		       	<br>
+	       	   	<br>
+	       	   	   	<br>
+	       	   	   	   	<br>
+	       	   	   	   		       	<br>
+	       	   	<br>
+	       	   	   	<br>
+	       	   	   	   	<br>
+	       	   	   	   		       	<br>
+	       	   	<br>
+	       	   	   	<br>
+	       	   	   	   	<br>
+	       	   	   	   		       	<br>
+	       	   	<br>
+	       	   	   	<br>
+	       	   	   	   	<br>
+	       	   	   	   		       	<br>
+	       	   	<br>
+	       	   	   	<br>
+	       	   	   	   	<br>
+	       	   	   	   		       	<br>
+	       	   	<br>
+	       	   	   	<br>
+	       	   	   	   	<br>
+	       	<h1>& MORE TBA</h1>
 
 	       </div>
 
