--- a/festival.html
+++ b/festival.html
@@ -216,27 +216,31 @@
 <br>
 <br>
 <br>
-<h1 id="six">CONTACT: <br> <font color="red">infohonestelectronics@gmail.com</font></h1>
+<h1 id="six">CONTACT: <br> <font color="red">
+<br>infohonestelectronics@gmail.com</font></h1>
 <br>
 <br>
 
-<br>
-<br>
-
-
-<img src="images/artwork3.png"  width="100%" class="sideimg">
-<br>
-<h1 id="six">MIXTAPES FROM ARTISTS:</h1>
-<br>
-<iframe width="100%" height="600" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/531082374&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=false&show_reposts=false&show_teaser=false&visual=true"></iframe>
-<br>
 <br>
 <br>
 <br>
 <h1>PROJECTS:</h1>
 <br>
+<h1 id="six"><font color="red">"Mutual Ground" Compilation:</font></h1>
+<br>
+<iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/540988281&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=false&show_reposts=false&show_teaser=false"></iframe>
+<br>
+<br>
+<br>
+<h1 id="six"><font color="red">Promo Mixtapes</font></h1>
+<br>
+<iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/531082374&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=false&show_reposts=false&show_teaser=false"></iframe>
+<br>
+<br>
+<br>
 <h3><font color="red">Clusters "Festivals Identity" — Nico Stephou</font></h3>
                                    <img src="images/artwork2.png"  width="100%" class="sideimg">
+                                   <img src="images/artwork3.png"  width="100%" class="sideimg">
 
 				 </div>
 	       <div "height:100%" class="col-3">
@@ -352,7 +356,7 @@ tb te ta t t<br>
 <img src="images/atf-21.png" width="100%" class="sideimg2">
             <h3>Joralsky (CY)</h3>
 	       	<p>Over the last couple of years Joralsky has been consistently delivering some memorable hyperlocal sets that take into deep consideration both the dancing community and its surrounding environment, which in turn render “genre” as trivial and antiquated. Hence, the diversity of parties he has cofounded: C’est demon! & Programmed for Love.
-In response to this year’s Earthgaze theme, he is preparing a sunrise set that reflects on the possibility of different gazes. In his own words: “There are two ways one can gaze on earth’s soil…either directly on the ground or if the soil itself becomes dust in the atmosphere. While the first gaze suggests a contemplative, solitary gaze, the second one requires a group commotion agitating the earth: this one implies dancing. My set will oscillate between these two possible earthgazes.” <a href="https://honestelectronics.bandcamp.com/track/tivoli-a-e" target="_blank">Soundcloud</a></p>
+In response to this year’s Earthgaze theme, he is preparing a sunrise set that reflects on the possibility of different gazes. In his own words: “There are two ways one can gaze on earth’s soil…either directly on the ground or if the soil itself becomes dust in the atmosphere. While the first gaze suggests a contemplative, solitary gaze, the second one requires a group commotion agitating the earth: this one implies dancing. My set will oscillate between these two possible earthgazes.” <a href="https://honestelectronics.bandcamp.com/track/futures" target="_blank">Soundcloud</a></p>
 
 <br>
 <br>
