--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<h4><a href="https://honestelectronics.bandcamp.com/merch" target="_blank">Shop</a></h4>
 			<p></p>
             
-		<a href="festival.html" style="color:red;">Click Here for "The Gathering 2018" Info</a>
+		<a href="festival.html" style="color:red;">THE GATHERING III INFO PAGE</a>
 		<br>
 		<p><u>Record Label Info</u><br>
 				<p><u>Artists</u><br>
@@ -79,7 +79,7 @@
 			<a href="https://honestelectronics.bandcamp.com/album/dishonest-01" target="_blank">(DIS01) BillyD + RAW SILVER - Dishonest 01 (12")</a>
 
 
-			<p><u>Events</u><br>
+			<p><u>Past Events</u><br>
 			<a href="events/gathering.html">—7/2016 The Gathering, Festival, Kampia</a>
 			<br><a href="events/launch.html">—8/2016 Record Label Launch, Thkio Ppalies, Nicosia</a>
 			<br><a href="events/discosucks.html">—NYE/2017 Disco Sucks, Coronet, Nicosia</a>
