--- a/festival.html
+++ b/festival.html
@@ -200,7 +200,7 @@
 <p><a href="https://www.facebook.com/events/1687395218020168/">FACEBOOK EVENT</a></p>
 <br>
 <br>
-<h1 id="five">PRICES:</h1>
+<h1 id="five">TICKETS</h1>
 
 <p>Part 1 is for FREE</p>
 
@@ -216,17 +216,18 @@
 <br>
 <br>
 <br>
-<h1 id="six">CONTACT: <br> <font color="red">
-<br>infohonestelectronics@gmail.com</font></h1>
+<h1 id="six">CONTACT <br> <font color="red"></font></h1>
+<br>
+<h1>infohonestelectronics@gmail.com</h1>
 <br>
 <br>
 
 <br>
 <br>
 <br>
-<h1>PROJECTS:</h1>
+<h1>PROJECTS</h1>
 <br>
-<h1 id="six"><font color="red">"Mutual Ground" Compilation:</font></h1>
+<h1 id="six"><font color="red">"Mutual Ground II" Compilation</font></h1>
 <br>
 <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/540988281&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=false&show_reposts=false&show_teaser=false"></iframe>
 <br>
