--- a/festival.html
+++ b/festival.html
@@ -451,7 +451,7 @@ He performs using a selection of electronic modular sythesizers, drum machines a
 
 	       	<img src="images/atf-18.png" width="100%" class="sideimg2">
             <h3>Wonderwander (CY)</h3>
-	       	<p>Wandeerwonder’s love for spreading music has been evident for decades. By diving into the dub feeling and selecting from various styles (techno,disco,house,reggae,psy...) she is aiming to surf on the vibes of mystery. <a href="<a href="https://soundcloud.com/honest-electronics/wonderwander-at-river-stage-dishonest-29-july-2017" target="_blank">Soundcloud</a></p>
+	       	<p>Wandeerwonder’s love for spreading music has been evident for decades. By diving into the dub feeling and selecting from various styles (techno,disco,house,reggae,psy...) she is aiming to surf on the vibes of mystery. <a href="https://soundcloud.com/honest-electronics/wonderwander-at-river-stage-dishonest-29-july-2017" target="_blank">Soundcloud</a></p>
 	       	<br>
 	       	   	<br>
 	       	   	   	<br>
