--- a/art-page1.html
+++ b/art-page1.html
@@ -17,19 +17,102 @@
 
 <div>
 
+	<br>
+<br>
+<br>
+
+<div>
+
+<marquee 
+class="two"
+scrollamount="10"
+direction= "right">
+<img src="images/atf-14.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="9"
+direction= "right">
+<img src="images/atf-13.png" width="100%" class="sideimg2">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="8"
+direction= "right">
+<img src="images/atf-12.png" width="100%" class="sideimg2">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="7"
+direction= "left">
+<img src="images/atf-11.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="6"
+direction= "right">
+<img src="images/atf-18.png" width="100%" class="sideimg2">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="5"
+direction= "right">
+<img src="images/atf-19.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="4"
+direction= "right">
+<img src="images/atf-20.png" width="100%" class="sideimg2">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="3"
+direction= "left">
+<img src="images/atf-15.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="2"
+direction= "right">
+<img src="images/atf-19.png" width="100%" class="sideimg2">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="1"
+direction= "left">
+<img src="images/atf-17.png" width="100%" class="sideimg4">
+</marquee>
+
+</div>
+
+<br>
+<br>
+
+
+
 <marquee 
 class="one"
 scrollamount="10"
 direction="left"
 behavior="scroll">
-<img src="images/atf-01.png" width="100%" class="sideimg2">
+<img src="images/atf-01.png" width="100%" class="sideimg3">
 </marquee>
 
 <marquee scrollamount="9"
 class="one"
-direction="left"
+direction="right"
 behavior="scroll">
-<img src="images/atf-02.png" width="100%" class="sideimg2">
+<img src="images/atf-02.png" width="100%" class="sideimg4">
 </marquee>
 
 <marquee scrollamount="8"
@@ -50,7 +133,7 @@ behavior="scroll">
 class="one"
 direction="left"
 behavior="scroll">
-<img src="images/atf-05.png" width="100%" class="sideimg2">
+<img src="images/atf-05.png" width="100%" class="sideimg3">
 </marquee>
 
 <marquee scrollamount="5"
@@ -62,16 +145,16 @@ behavior="scroll">
 
 <marquee scrollamount="4"
 class="one"
-direction="left"
+direction="right"
 behavior="scroll">
-<img src="images/atf-07.png" width="100%" class="sideimg2">
+<img src="images/atf-07.png" width="100%" class="sideimg4">
 </marquee>
 
 <marquee scrollamount="3"
 class="one"
-direction="left"
+direction="right"
 behavior="scroll">
-<img src="images/atf-08.png" width="100%" class="sideimg2">
+<img src="images/atf-08.png" width="100%" class="sideimg4">
 </marquee>
 
 <marquee scrollamount="2"
@@ -83,7 +166,7 @@ behavior="scroll">
 
 <marquee scrollamount="1"
 class="one"
-direction="left"
+direction="right"
 behavior="scroll">
 <img src="images/atf-10.png" width="100%" class="sideimg2">
 </marquee>
@@ -95,20 +178,21 @@ behavior="scroll">
 <br>
 <br>
 
+
 <div>
 
 <marquee 
 class="two"
 scrollamount="10"
 direction= "right">
-<img src="images/atf-11.png" width="100%" class="sideimg2">
+<img src="images/atf-11.png" width="100%" class="sideimg4">
 </marquee>
 
 <marquee 
 class="two"
 scrollamount="9"
-direction= "right">
-<img src="images/atf-12.png" width="100%" class="sideimg2">
+direction= "left">
+<img src="images/atf-12.png" width="100%" class="sideimg3">
 </marquee>
 
 <marquee 
@@ -128,7 +212,7 @@ direction= "right">
 <marquee 
 class="two"
 scrollamount="6"
-direction= "right">
+direction= "left">
 <img src="images/atf-15.png" width="100%" class="sideimg2">
 </marquee>
 
@@ -136,14 +220,14 @@ direction= "right">
 class="two"
 scrollamount="5"
 direction= "right">
-<img src="images/atf-16.png" width="100%" class="sideimg2">
+<img src="images/atf-16.png" width="100%" class="sideimg3">
 </marquee>
 
 <marquee 
 class="two"
 scrollamount="4"
 direction= "right">
-<img src="images/atf-17.png" width="100%" class="sideimg2">
+<img src="images/atf-17.png" width="100%" class="sideimg3">
 </marquee>
 
 <marquee 
@@ -156,7 +240,7 @@ direction= "right">
 <marquee 
 class="two"
 scrollamount="2"
-direction= "right">
+direction= "left">
 <img src="images/atf-19.png" width="100%" class="sideimg2">
 </marquee>
 
@@ -164,7 +248,7 @@ direction= "right">
 class="two"
 scrollamount="1"
 direction= "right">
-<img src="images/atf-20.png" width="100%" class="sideimg2">
+<img src="images/atf-20.png" width="100%" class="sideimg4">
 </marquee>
 
 </div>
@@ -172,7 +256,7 @@ direction= "right">
 <br>
 <br>
 <br>
-<br>
+
 
 <div>
 
@@ -186,8 +270,8 @@ direction= "left">
 <marquee 
 class="two"
 scrollamount="9"
-direction= "left">
-<img src="images/atf-22.png" width="100%" class="sideimg2">
+direction= "right">
+<img src="images/atf-22.png" width="100%" class="sideimg3">
 </marquee>
 
 <marquee 
@@ -208,20 +292,20 @@ direction= ""left">
 class="two"
 scrollamount="6"
 direction= "left">
-<img src="images/atf-25.png" width="100%" class="sideimg2">
+<img src="images/atf-25.png" width="100%" class="sideimg4">
 </marquee>
 
 <marquee 
 class="two"
 scrollamount="5"
-direction= "left">
+direction= "right">
 <img src="images/atf-26.png" width="100%" class="sideimg2">
 </marquee>
 
 <marquee 
 class="two"
 scrollamount="4"
-direction= "left">
+direction= "right">
 <img src="images/atf-27.png" width="100%" class="sideimg2">
 </marquee>
 
@@ -229,7 +313,7 @@ direction= "left">
 class="two"
 scrollamount="3"
 direction= "left">
-<img src="images/atf-28.png" width="100%" class="sideimg2">
+<img src="images/atf-28.png" width="100%" class="sideimg4">
 </marquee>
 
 <marquee 
@@ -242,17 +326,15 @@ direction= "left">
 <marquee 
 class="two"
 scrollamount="1"
-direction= "left">
-<img src="images/atf-30.png" width="100%" class="sideimg2">
+direction= "right">
+<img src="images/atf-30.png" width="100%" class="sideimg4">
 </marquee>
 
 </div>
 
 <br>
 <br>
-<br>
-<br>
-<br>
+
 
 <div>
 
@@ -266,9 +348,9 @@ behavior="scroll">
 
 <marquee scrollamount="9"
 class="one"
-direction="left"
+direction="right"
 behavior="scroll">
-<img src="images/atf-01.png" width="100%" class="sideimg3">
+<img src="images/atf-01.png" width="100%" class="sideimg2">
 </marquee>
 
 <marquee scrollamount="8"
@@ -280,9 +362,9 @@ behavior="scroll">
 
 <marquee scrollamount="7"
 class="one"
-direction="left"
+direction="right"
 behavior="scroll">
-<img src="images/atf-10.png" width="100%" class="sideimg3">
+<img src="images/atf-10.png" width="100%" class="sideimg4">
 </marquee>
 
 <marquee scrollamount="6"
@@ -296,14 +378,14 @@ behavior="scroll">
 class="one"
 direction="left"
 behavior="scroll">
-<img src="images/atf-05.png" width="100%" class="sideimg3">
+<img src="images/atf-05.png" width="100%" class="sideimg4">
 </marquee>
 
 <marquee scrollamount="4"
 class="one"
 direction="left"
 behavior="scroll">
-<img src="images/atf-03.png" width="100%" class="sideimg3">
+<img src="images/atf-03.png" width="100%" class="sideimg2">
 </marquee>
 
 <marquee scrollamount="3"
@@ -322,18 +404,16 @@ behavior="scroll">
 
 <marquee scrollamount="1"
 class="one"
-direction="left"
+direction="right"
 behavior="scroll">
-<img src="images/atf-04.png" width="100%" class="sideimg3">
+<img src="images/atf-04.png" width="100%" class="sideimg4">
 </marquee>
 
 </div>
 
 <br>
 <br>
-<br>
-<br>
-<br>
+
 
 <div>
 
@@ -341,7 +421,7 @@ behavior="scroll">
 class="two"
 scrollamount="10"
 direction= "right">
-<img src="images/atf-12.png" width="100%" class="sideimg3">
+<img src="images/atf-12.png" width="100%" class="sideimg2">
 </marquee>
 
 <marquee 
@@ -369,7 +449,7 @@ direction= "right">
 class="two"
 scrollamount="6"
 direction= "right">
-<img src="images/atf-17.png" width="100%" class="sideimg3">
+<img src="images/atf-17.png" width="100%" class="sideimg4">
 </marquee>
 
 <marquee 
@@ -383,7 +463,7 @@ direction= "right">
 class="two"
 scrollamount="4"
 direction= "right">
-<img src="images/atf-14.png" width="100%" class="sideimg3">
+<img src="images/atf-14.png" width="100%" class="sideimg4">
 </marquee>
 
 <marquee 
@@ -397,7 +477,7 @@ direction= "right">
 class="two"
 scrollamount="2"
 direction= "right">
-<img src="images/atf-19.png" width="100%" class="sideimg3">
+<img src="images/atf-19.png" width="100%" class="sideimg4">
 </marquee>
 
 <marquee 
@@ -411,9 +491,7 @@ direction= "right">
 
 <br>
 <br>
-<br>
-<br>
-<br>
+
 
 <div>
 
@@ -428,14 +506,14 @@ direction= "left">
 class="two"
 scrollamount="9"
 direction= "left">
-<img src="images/atf-29.png" width="100%" class="sideimg2">
+<img src="images/atf-29.png" width="100%" class="sideimg3">
 </marquee>
 
 <marquee 
 class="two"
 scrollamount="8"
 direction= "left">
-<img src="images/atf-25.png" width="100%" class="sideimg2">
+<img src="images/atf-25.png" width="100%" class="sideimg3">
 </marquee>
 
 <marquee 
@@ -448,7 +526,7 @@ direction= "left">
 <marquee 
 class="two"
 scrollamount="6"
-direction= "left">
+direction= "right">
 <img src="images/atf-23.png" width="100%" class="sideimg2">
 </marquee>
 
@@ -456,14 +534,14 @@ direction= "left">
 class="two"
 scrollamount="5"
 direction= "left">
-<img src="images/atf-24.png" width="100%" class="sideimg2">
+<img src="images/atf-24.png" width="100%" class="sideimg4">
 </marquee>
 
 <marquee 
 class="two"
 scrollamount="4"
-direction= "left">
-<img src="images/atf-28.png" width="100%" class="sideimg2">
+direction= "right">
+<img src="images/atf-28.png" width="100%" class="sideimg4">
 </marquee>
 
 <marquee 
@@ -483,15 +561,12 @@ direction= "left">
 <marquee 
 class="two"
 scrollamount="1"
-direction= "left">
-<img src="images/atf-21.png" width="100%" class="sideimg2">
+direction= "right">
+<img src="images/atf-21.png" width="100%" class="sideimg4">
 </marquee>
 
 </div>
 
-<br>
-<br>
-<br>
 <br>
 <br>
 
@@ -570,7 +645,6 @@ behavior="scroll">
 
 </div>
 
-<br>
 <br>
 <br>
 
@@ -726,6 +800,159 @@ direction= "left">
 
 </div>
 
+<br>
+<br>
+
+
+<div>
+
+<marquee 
+class="two"
+scrollamount="10"
+direction= "left">
+<img src="images/atf-30.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="9"
+direction= "left">
+<img src="images/atf-29.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="8"
+direction= "left">
+<img src="images/atf-25.png" width="100%" class="sideimg2">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="7"
+direction= "left">
+<img src="images/atf-26.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="6"
+direction= "left">
+<img src="images/atf-23.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="5"
+direction= "left">
+<img src="images/atf-24.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="4"
+direction= "left">
+<img src="images/atf-28.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="3"
+direction= "left">
+<img src="images/atf-27.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="2"
+direction= "left">
+<img src="images/atf-22.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="1"
+direction= "left">
+<img src="images/atf-21.png" width="100%" class="sideimg4">
+</marquee>
+
+</div>
+<br>
+<br>
+
+<div>
+
+<marquee 
+class="two"
+scrollamount="10"
+direction= "left">
+<img src="images/atf-14.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="9"
+direction= "left">
+<img src="images/atf-13.png" width="100%" class="sideimg2">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="8"
+direction= "left">
+<img src="images/atf-12.png" width="100%" class="sideimg2">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="7"
+direction= "right">
+<img src="images/atf-11.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="6"
+direction= "left">
+<img src="images/atf-18.png" width="100%" class="sideimg2">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="5"
+direction= "left">
+<img src="images/atf-19.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="4"
+direction= "left">
+<img src="images/atf-20.png" width="100%" class="sideimg2">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="3"
+direction= "right">
+<img src="images/atf-15.png" width="100%" class="sideimg4">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="2"
+direction= "left">
+<img src="images/atf-19.png" width="100%" class="sideimg2">
+</marquee>
+
+<marquee 
+class="two"
+scrollamount="1"
+direction= "right">
+<img src="images/atf-17.png" width="100%" class="sideimg4">
+</marquee>
+
+</div>
 
 
 	</body>
