--- a/art-page2.html
+++ b/art-page2.html
@@ -16,6 +16,27 @@
 
 <body>
 
+	<br>
+	<br>
+	<br>
+		<br>
+	<br>
+	<br>
+		<br>
+	<br>
+	<br>
+		<br>
+	<br>
+	<br>
+		<br>
+	<br>
+	<br>
+		<br>
+	<br>
+	<br>
+<p>
+	<center>HELPING HAND</center></p>
+
 	</body>
 
 </html>
