--- a/festival.html
+++ b/festival.html
@@ -103,9 +103,9 @@
 🔵 isel (LIVE)<br>
 🔵 Joralsky<br>
 🔵 spivak<br>
+🔵 Hibiscus<br>
 🔵 Whirl-DOS (LIVE)<br>
-⚫️ uvglove (LIVE)<br>
-⚫️ Sfron (LIVE)</p>
+⚫️ UVLGLOV (LIVE)<br>
 
 <p>🔴 International Guest<br>
 🔵 Collective<br>
@@ -137,13 +137,13 @@
 <p>STARGAZE is a themed night of ambient and star animated relaxing music. We asked our invited artists to be inspired by what stars means to them.</p>
 
 <p>🔴 Outermost (LIVE)<br>
+🔴 Kris Vango (LIVE)<br>
 🔵 anthropos (LIVE)<br>
 🔵 elektroniki (LIVE)<br>
 🔵 Michalis Sham<br>
 🔵 mindscape (LIVE)<br>
 🔵 Mohama Tajalof<br>
 🔵 Pfysics (LIVE)<br>
-🔵 Whirl-DOS (LIVE)<br>
 ⚫️ Ayios Loizos<br>
 ⚫️ Sofronis<br>
 ⚫️ Didgeridoo Meditation </p>
