--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<h4><a href="https://honestelectronics.bandcamp.com/merch" target="_blank">Shop</a></h4>
 			<p></p>
             <br>
-		<a href="festival.html" style="color:red;">THE GATHERING III INFO PAGE</a>
+		<a href="festival.html" style="color:red;">CLICK HERE FOR THE GATHERING III INFO PAGE</a>
 		<br>
 		<br>
 		<p><u>Record Label Info</u><br>
