--- a/soft-plane/soft-plane.html
+++ b/soft-plane/soft-plane.html
@@ -20,9 +20,15 @@
 <br>
 <br>
 
-<div>
 
-<marquee 
+
+
+
+
+
+
+<div>
+<marquee
 class="two"
 scrollamount="6"
 direction= "left">
@@ -31,6 +37,15 @@ direction= "left">
 
 </div>
 
+<div>
+
+<marquee 
+class="one"
+scrollamount="10"
+direction= "left">
+<img src="images/sky.png">
+</marquee>
+</div>
 
 <br>
 <br>
